--- a/.gitmodules
+++ b/.gitmodules
@@ -30,3 +30,7 @@
 [submodule "galaxy/ansible/roles/galaxy-htcondor"]
 	path = galaxy/ansible/roles/galaxy-htcondor
 	url = https://github.com/usegalaxy-eu/ansible-htcondor-grycap
+
+[submodule "galaxy/ansible/roles/galaxy-proftpd"]
+	path = galaxy/ansible/roles/galaxy-proftpd
+	url = https://github.com/galaxyproject/ansible-proftpd
