--- a/galaxy/ansible/flower_provision.yml
+++ b/galaxy/ansible/flower_provision.yml
@@ -1,6 +1,8 @@
 - hosts: localhost
   connection: local
   remote_user: root
+  vars_files:
+    - vars/main.yml
   vars:
     flower_python_package_version: 1.2.0
     flower_custom_logging: false
@@ -8,7 +10,7 @@
     flower_conf_dir: /etc/flower
     flower_bind_address: 0.0.0.0
     flower_port: 5555
-    flower_broker_api: http://flower:flower@localhost:5671/api/  # URL of broker (RabbitMQ Management) API
+    flower_broker_api: "http://{{ rabbitmq_flower_username }}:{{ rabbitmq_flower_password }}@localhost:{{ rabbitmq_management_port }}/api/"  # URL of broker (RabbitMQ Management) API
     flower_persistent: true
     flower_proxy_prefix: /flower
     flower_ui_users: []
