--- a/galaxy/ansible/provision.yml
+++ b/galaxy/ansible/provision.yml
@@ -1,7 +1,76 @@
-- hosts: localhost
-  connection: local
-  vars:
-    postgresql_version: 15
-  roles:
-      - role: galaxyprojectdotorg.galaxyextras
-        tags: galaxyextras
+---
+- import_playbook: galaxy_root.yml
+  when: galaxy_root | bool
+  tags: galaxy_root
+
+- import_playbook: galaxy_job_metrics.yml
+  when: galaxy_job_metrics | bool
+  tags: galaxy_job_metrics
+
+- import_playbook: galaxy_extra_dependencies.yml
+  when: galaxy_extra_dependencies | bool
+  tags: galaxy_extra_dependencies
+
+- import_playbook: gravity.yml
+  when: galaxy_gravity | bool
+  tags: galaxy_gravity
+
+- import_playbook: postgresql.yml
+  when: galaxy_postgres | bool
+  tags: galaxy_postgres
+
+# - import_playbook: nginx.yml
+#   when: galaxy_nginx | bool
+#   tags: galaxy_nginx
+
+- import_playbook: proftpd.yml
+  when: galaxy_proftpd | bool
+  tags: galaxy_proftpd
+
+- import_playbook: slurm.yml
+  when: galaxy_slurm | bool
+  tags: galaxy_slurm
+
+- import_playbook: condor.yml
+  when: galaxy_condor | bool
+  tags: galaxy_condor
+
+- import_playbook: pbs.yml
+  when: galaxy_pbs | bool
+  tags: galaxy_pbs
+
+- import_playbook: k8s.yml
+  when: galaxy_k8s_jobs | bool
+  tags: galaxy_k8s_jobs
+
+- import_playbook: cvmfs_client.yml
+  when: galaxy_cvmfs_client | bool
+  tags: galaxy_cvmfs_client
+
+- import_playbook: rabbitmq.yml
+  when: galaxy_rabbitmq | bool
+  tags: galaxy_rabbitmq
+
+- import_playbook: redis.yml
+  when: galaxy_redis | bool
+  tags: galaxy_redis
+
+# - import_playbook: flower.yml
+#   when: galaxy_flower | bool
+#   tags: galaxy_flower
+
+- import_playbook: tusd.yml
+  when: galaxy_tusd | bool
+  tags: galaxy_tusd
+
+- import_playbook: supervisor.yml
+  when: galaxy_supervisor | bool
+  tags: galaxy_supervisor
+
+- import_playbook: galaxy_scripts.yml
+  when: galaxy_scripts | bool
+  tags: galaxy_scripts
+
+- import_playbook: galaxy_job_conf.yml
+  when: galaxy_job_conf | bool
+  tags: galaxy_job_conf
