--- a/galaxy/ansible/redis.yml
+++ b/galaxy/ansible/redis.yml
@@ -9,7 +9,7 @@
         path: /etc/redis/redis.conf
         regexp: '^daemonize'
         line: 'daemonize no'
-        state: present
+        state: "{{ galaxy_apt_package_state }}"
     - name: Install redis python package for galaxy
       pip:
         name: "redis"
@@ -17,5 +17,4 @@
         virtualenv_command: "{{ pip_virtualenv_command | default( 'virtualenv' ) }}"
         extra_args: --index-url https://wheels.galaxyproject.org/simple --extra-index-url https://pypi.python.org/simple
       become: True
-      become_user: "{{ redis_user }}"
-    
+      become_user: "{{ redis_venv_user }}"
