--- a/galaxy/ansible/slurm.yml
+++ b/galaxy/ansible/slurm.yml
@@ -17,7 +17,7 @@
     - name: Install slurm-drmaa package
       package:
         name: slurm-drmaa1
-        state: present
+        state: "{{ galaxy_apt_package_state }}"
 
     - name: Create symbolic link for libdrmaa.so
       file:
@@ -39,3 +39,13 @@
         - /var/log/munge
         - /var/run/munge
         - /etc/munge
+
+    # If job_conf.xml is installed before running galaxyprojectdotorg.galaxy, this would already be installed.
+    - name: Fetch DRMAA wheel for Galaxy
+      pip:
+        name: "drmaa"
+        extra_args: "--index-url https://wheels.galaxyproject.org/simple/ --extra-index-url https://pypi.python.org/simple"
+        virtualenv: "{{ galaxy_venv_dir }}"
+      environment:
+        PYTHOPATH: null
+        VIRTUAL_ENV: "{{ galaxy_venv_dir }}"
